CHANGELOG

When		Who		What
======================================================================================
2017-01-25 	Richard Forth   Fixed #88 Unable to determine whether Apache is using 
				worker or prefork
2017-01-25 	Richard Forth   Fixed #84 Unable to open pidfile.
				- Changed up the logic to check if the
				setting is in fact a file BEFORE 'guessing'.
2017-01-25 	Richard Forth   MPM ITK detection and exit.
2017-01-25 	Richard Forth   Fixed #85 Wrong MPM information
2017-01-19 	Richard Forth   Fixed #82 bug with calculations displaying wrong
				colours
2017-01-14 	Richard Forth   Updated logo
				- updated tagline
				- added a cool intro
				- Fixed issue #62 MariaDB wrongly detected as
				MySQL, this also detects percona correctly
				too.
				- Finally fixed the #57 issue regarding wonky
				arrows in the report
				- Fixed the #66 issue regarding extraneous
				information in --report output
				- Fixed futher issues relating to the #66 issue
				regarding extraneous information in --report output
				- Added a temp workaround for #69
				- Fixed #69 by ripping out the cool typing
				emulation as it breaks on Red Hat based
				systems less than CentOS7
				- Fixed #70 missing newline in large log
				- Fixed #77 CRITICAL should be ADVISORY
				- Fixed color problems related to #77
2017-01-13 	Richard Forth   Addressed issue #9 Find Large Logs
				 - Mopped up some code and made the additional
				 services check look a bit more polished..
				 - Addressed issue #25 PHP-FPM Logs
				 - Addressed issue #48 Plesk logs (warning)
				 - Addressed issue #49 Detect Plesk
				 - Addressed issue #50 Detect icPanel
				 - Code cleanup and output polishing
				 - Addressed issue #3 Detect Package Updates
				 - Addressed issue #55 bug in package updates
				 on debian and ubuntu systems
				 - Addressed issue #55 bug in package updates
				 - Addressed issue #56 Detect PHP Updates
				 - Added more directories to check for large
				 log files: